--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,5 +1,5 @@
 .content {
-    width: 75%;
+    flex-grow: 1;
 }
 
 .content--header {
