--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 2.3rem;
-    height: 94vh;
+    height: 100vh;
+    flex: 0 0 250px;
 }
 
 .logo {
